# Agentic-Developer-Environment

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ade/: __init__.py
ade/agents/: __init__.py  codegen.py  executor.py  orchestrator.py  parsers.py  planner.py  state.py
ade/agents/prompts/: codegen_system.txt  executor_system.txt  planner_system.txt
ade/api/: dependencies.py  events.py  main.py  schemas.py  task_runner.py
ade/api/routes/: projects.py  tasks.py  ws.py
ade/cli/: client.py  formatters.py  main.py
ade/core/: config.py  database.py  llm.py  models.py  redis_client.py
ade/rag/: __init__.py  chunking.py  embeddings.py  indexer.py  retriever.py  types.py
ade/sandbox/: Dockerfile.sandbox  docker_manager.py  security.py  workspace.py
ade/ui/: package-lock.json  package.json  vite.config.ts
ade/ui/src/: App.tsx  index.css
alembic/: env.py
alembic/versions/: 3ebe4e16db33_initial_schema.py
scripts/: bootstrap.sh
tests/: conftest.py  test_config.py  test_llm.py  test_models.py  test_redis_client.py
tests/test_agents/: test_codegen.py  test_executor.py  test_orchestrator.py  test_parsers.py  test_planner.py
tests/test_api/: conftest.py  test_health.py  test_projects.py  test_tasks.py
tests/test_cli/: test_commands.py
tests/test_integration/: test_full_pipeline.py
tests/test_rag/: conftest.py  test_chunking.py  test_embeddings.py  test_indexer.py  test_retriever.py
tests/test_sandbox/: test_apply_to_project.py  test_docker_manager.py  test_security.py  test_workspace.py
(+14 files in other folders)
